--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,44 @@
+
+
 body {
-    background-color: blue;
+    font-family: Arial, sans-serif;
+    height: 100%;
+    overflow: hidden;
 }
+
+#story {
+    width: 100%;
+    color: yellow;
+    height: 80%;
+    background-color: #333;
+    overflow-y:scroll;
+}
+
+#site-footer, .story:after {
+    position: static;
+    bottom: 0;
+    height: 20%;
+}
+
+#question {
+    padding: 10px 0;
+    width: 100%;
+    background-color: #ccc,
+}
+
+#answer {
+    padding: 10px, 0;
+    width: 100%;
+    background-color: #333;
+    text-align: center;
+    display: none;
+}
+
+.storyPart {
+    display: none;
+}
+
+p {
+    margin-top: 1em;
+}
+
